[package]
name = "zed"
version = "0.1.0"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
dotenv = "0.13.0"
env_logger = "0.7.1"
log = "0.4"
reqwest = "0.10.4"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
thruster = { version = "1.0.3", features = ["hyper_server"]}
tokio = { version = "0.2.22", features = ["full"] }
